[package]
name = "elgato-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
mdns = "3.0.0"
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"
